# QEMUAppleSilicon

./: .gitignore  README.md  WARP.md  debug_services.md  hmp-commands-info.hx  meson.build  run_iphone.sh  setup_qemu_apple_silicon.sh  start_iphone.sh
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-feature_request.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yaml
automation_scripts/: SCRIPTS.MD  create_disks.sh  disk_corrupt_need_new_disks.sh  mount_apfs_disk.sh  patch_filesystem.sh  restart_usb_connection.sh  restore.sh  run_iphone.sh  setup_iphone_networking.sh  setup_libimobiledevice_tools.sh  setup_qemu_apple_silicon.sh  start_companion_vm.sh  start_companion_vm_fixed.sh  test-patches.sh  unmount_apfs_disk.sh
crypto/: cipher.c
hw/: Kconfig  meson.build
hw/arm/: Kconfig  fsl-imx8mp.c  meson.build  xlnx-zynqmp.c
hw/arm/apple-silicon/: a13.c  a13_gxf.c  a9.c  boot.c  dart.c  kernel_patches.c  kernel_pf.c  lm-backlight.c  mem.c  meson.build  mt-spi.c  patcher.c  pf.c  s8000.c  sart.c  sep-sim.c  sep.c  t8030-config.c.inc  t8030.c  xnu_kpf.c  xnu_pf.c
hw/block/: Kconfig  apple_nvme_mmu.c  meson.build
hw/char/: Kconfig  apple_uart.c  meson.build
hw/display/: apple_displaypipe_v2.c  apple_displaypipe_v4.c
hw/dma/: apple_sio.c
hw/gpio/: apple_gpio.c
hw/i2c/: apple_i2c.c
hw/intc/: apple_aic.c  meson.build  trace-events
hw/misc/: Kconfig  meson.build
hw/nvme/: ctrl.c  ns.c
hw/nvram/: apple_nvram.c  eeprom_at24c.c
hw/pci-host/: apcie.c
hw/spmi/: apple_spmi.c  core.c
system/: vl.c
util/: meson.build
(+58 files in other folders)
